# telnet-menu-mockup-server

./: .gitignore  CMakeLists.txt  Makefile  echo-server.c  echo-server.cc
src/: ansi.h  defs.h  echo-server.cc  entry.cc  entry.h  example-data.h  menu.cc  menu.h  socketStream.cc  socketStream.h  socketstream.cc  socketstream.h
